@@ -1059,13 +1059,14 @@ public class CampusServiceImpl implements CampusService {
                 messages = chatMessageRepo.findTop20ByConversationIdOrderByTimestampDesc(existingConversation.get().getId());
             } else {
                 messages = chatMessageRepo.findTop20ByConversationIdAndIdLessThanOrderByIdDesc(existingConversation.get().getId(), cursorId);
-                hasMore = messages.size() == 20;
-                nextCursorId = messages.isEmpty() ? null : messages.get(messages.size() - 1).getId();
+
             }
+            hasMore = messages.size() == 20;
+            nextCursorId = messages.isEmpty() ? null : messages.get(messages.size() - 1).getId();
             return ResponseBuilder.build(HttpStatus.OK, "Success", buildHistoryMessages(existingConversation.get(), messages, hasMore, nextCursorId));
         }
 
-        Account accAdmin =  accountRepo.findByRole(Role.ADMIN).getFirst();
+        Account accAdmin =  accountRepo.findByRole(Role.ADMIN).get(0);
 
         if (accAdmin == null){
             return ResponseBuilder.build(HttpStatus.BAD_REQUEST, "Account admin not found or be deleted", null);
@@ -1074,12 +1075,12 @@ public class CampusServiceImpl implements CampusService {
          Conversation conversation = Conversation.builder()
                  .campusId(campus.getId())
                  .accAdminId(accAdmin.getId())
-                 .status(Status.CONVERSATION_ACTIVE)
+//                 .status(Status.CONVERSATION_ACTIVE)
                  .createdDate(LocalDateTime.now())
                  .updatedDate(LocalDateTime.now())
                  .build();
 
-        conversationRepo.save(conversation);
+//        conversationRepo.save(conversation);
 
         return ResponseBuilder.build(HttpStatus.OK, "Success", buildHistoryMessages(conversation, messages, hasMore, nextCursorId));
     }
